[gd_scene load_steps=11 format=3 uid="uid://nbp0nqe2omui"]

[ext_resource type="Script" uid="uid://bi6xqguwa44s" path="res://game.gd" id="1_526co"]
[ext_resource type="PackedScene" uid="uid://c26dkstg4cqe8" path="res://player_ghost.tscn" id="2_ubi6i"]
[ext_resource type="PackedScene" uid="uid://dxsq60onwamww" path="res://Levels/level_tutorial_03.tscn" id="3_526co"]
[ext_resource type="PackedScene" uid="uid://bry0e14a7otyd" path="res://camera_2d.tscn" id="3_sw4yy"]
[ext_resource type="PackedScene" uid="uid://pec1kaegnjpg" path="res://Level_Making/player.tscn" id="4_q1u1j"]
[ext_resource type="AudioStream" uid="uid://clxicred0arbw" path="res://assets/Proffesor McHoops Evil Loops.ogg" id="6_3xxmq"]
[ext_resource type="PackedScene" uid="uid://cmpniq1j3ghst" path="res://pause_component.tscn" id="7_f58p3"]
[ext_resource type="PackedScene" path="res://player_ui.tscn" id="8_q1u1j"]
[ext_resource type="AudioStream" uid="uid://d10krbieamqy5" path="res://assets/sfx/pause.wav" id="8_sw4yy"]
[ext_resource type="AudioStream" uid="uid://ub220pwldlci" path="res://assets/sfx/block.wav" id="9_q1u1j"]

[node name="Game" type="Node2D"]
script = ExtResource("1_526co")
ghost_scene = ExtResource("2_ubi6i")

[node name="Level" parent="." instance=ExtResource("3_526co")]

[node name="Camera2D" parent="." instance=ExtResource("3_sw4yy")]

[node name="Player" parent="." instance=ExtResource("4_q1u1j")]
position = Vector2(115, 726)

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3xxmq")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="player_ui" parent="CanvasLayer" instance=ExtResource("8_q1u1j")]

[node name="pause_component" parent="CanvasLayer" instance=ExtResource("7_f58p3")]

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_sw4yy")
bus = &"SFX"

[node name="NiceSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_q1u1j")
bus = &"SFX"
